--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Software engineer">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600i&amp;amp;subset=vietnamese" rel="stylesheet">
     
-    <link rel="preload" href="/assets/css/0.styles.54c66737.css" as="style"><link rel="preload" href="/assets/js/app.3df345ff.js" as="script"><link rel="preload" href="/assets/js/6.481ee7cb.js" as="script"><link rel="prefetch" href="/assets/js/10.a20d7d32.js"><link rel="prefetch" href="/assets/js/2.22c2dc91.js"><link rel="prefetch" href="/assets/js/3.db8d0a5e.js"><link rel="prefetch" href="/assets/js/4.72bf6714.js"><link rel="prefetch" href="/assets/js/5.0a3a6445.js"><link rel="prefetch" href="/assets/js/7.1385ae8c.js"><link rel="prefetch" href="/assets/js/8.cf8c3653.js"><link rel="prefetch" href="/assets/js/9.af759ca0.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.54c66737.css">
+    <link rel="preload" href="/assets/css/0.styles.549b32df.css" as="style"><link rel="preload" href="/assets/js/app.36e51ec2.js" as="script"><link rel="preload" href="/assets/js/6.96f76045.js" as="script"><link rel="prefetch" href="/assets/js/10.3af75d5b.js"><link rel="prefetch" href="/assets/js/2.0ce5930a.js"><link rel="prefetch" href="/assets/js/3.3b493efb.js"><link rel="prefetch" href="/assets/js/4.5625c740.js"><link rel="prefetch" href="/assets/js/5.d5471105.js"><link rel="prefetch" href="/assets/js/7.cc5a32ed.js"><link rel="prefetch" href="/assets/js/8.64f9f5e6.js"><link rel="prefetch" href="/assets/js/9.77a63bb8.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.549b32df.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.3df345ff.js" defer></script><script src="/assets/js/6.481ee7cb.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.36e51ec2.js" defer></script><script src="/assets/js/6.96f76045.js" defer></script>
   </body>
 </html>
